feat: Implement right click contextmenu logic

--- a/contextmenu/index.html
+++ b/contextmenu/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="scrpit.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h2>Right Click Anywhere 🚀</h2>
+
+    <div class="menu" style="display: none; position: absolute;">
+        <ul>
+            <li>Refresh</li>
+            <li>Copy</li>
+            <li>Paste</li>
+            <li>Inspect</li>
+        </ul>
+    </div>
 </body>
 </html>
