--- a/BMI Calculator/bmi.html
+++ b/BMI Calculator/bmi.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="bmi.css">
 </head>
 <body>
+    <div class="container">
+    <h1>BMI Calculator</h1>
+    <form id="bmiForm">
+      <label for="weight">Weight (kg):</label>
+      <input type="number" id="weight" placeholder="Enter weight in kg" required>
+      
+      <label for="height">Height (cm):</label>
+      <input type="number" id="height" placeholder="Enter height in cm" required>
+      
+      <div class="buttons">
+        <button type="submit">Calculate</button>
+        <button type="button" id="resetBtn">Reset</button>
+      </div>
+    </form>
+    <div id="result"></div>
+  </div>
     <script src="bmi.js"></script>
 </body>
 </html>
