--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tip Calculator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div class="container">
+    <h2>Tip Calculator</h2>
+
+    <input type="number" id="bill" placeholder="Bill Amount (₹)" />
+
+    <select id="tip">
+      <option value="">Select Tip %</option>
+      <option value="5">5%</option>
+      <option value="10">10%</option>
+      <option value="15">15%</option>
+      <option value="20">20%</option>
+    </select>
+
+    <input type="number" id="people" placeholder="Number of people" />
+
+    <button onclick="calculateTip()">Calculate</button>
+    <button onclick="resetCalc()" class="reset">Reset</button>
+
+    <p id="result"></p>
+  </div>
+
     <script src="script.js"></script>
 </body>
 </html>
